add jpacktool-prepare mojo